--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,4 +46,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(103468)</script>
 </html>
