--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,6 +46,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
- <!-- <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(103468)</script>
- -->
+ <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="Career-Finder"
+  agent-id="c12b418d-1b1a-4063-bc85-31f7df91db1b"
+  language-code="en"
+></df-messenger>
   </html>
