trying to get chatbot icon changed

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,5 +52,6 @@
   chat-title="Career-Finder"
   agent-id="c12b418d-1b1a-4063-bc85-31f7df91db1b"
   language-code="en"
+  chat-icon="https://www.canva.com/design/DAD6HiIA_2A/view"
 ></df-messenger>
   </html>
